fixes wording and base url logic
